# sidekick-cat

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: smoke-bot.yml  smoke-models.yml
infra/: deploy.sh
infra/terraform/: .gitignore  imports.tf  main.tf
scripts/: config.py  diff_anchors.py  gh.py  label_pr.py  limits.py  llm_client.py  merge_pr.py  models_client.py  repo_context.py  review_pr.py  summarize_pr.py  validate_pr.py  welcome.py
scripts/tests/: test_limits.py  test_llm_client.py  test_models_client.py  test_pr_logic.py  test_server.py
server/: app.py  gh_app_auth.py  router.py  security.py
templates/: welcome.md
tools/: requirements.txt  setup_wizard.py  wizard_logic.py
tools/tests/: test_wizard_logic.py
