[project]
name = "sidekick-cat"
version = "0.1.0"
description = "A private GitHub review bot posting under its own App identity, using free-tier LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0",
    "PyGithub>=2.0",
]

[project.optional-dependencies]
setup-wizard = ["streamlit>=1.38"]
